[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BondsTool"
version = "0.0.1"
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "plotly",
    "dash",
    "xlsxwriter",
    "beautifulsoup4"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "matplotlib",   
    "black==22.12.0",
    "ruff==0.0.279",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]